--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ blockquote {
 	</div><!-- /end .welcome.section -->
 
 	<div class="blog section">
-		<h1 class="lede">Recently in <a href="#">shoot Egg</a></h1>
+		<h1 class="lede">Recently in <a href="#">jumping dolphin</a></h1>
 
 		<div class="main">
 			<div class="article">
@@ -413,24 +413,15 @@ blockquote {
 				<!-- http://www.gutenberg.org/files/31611/31611-h/31611-h.htm -->
 
 				<div class="intro">
-					<p>Somewhere in my stomach I felt a cold, hard knot. Take stainless steel alloyed with titanium and plate it with three inches of lead. Take a brain made up of super-charged magnetic crystals enclosed in a leaden cranium and shielded by alloy steel. A bullet wouldn&#8217;t pierce it; radiations wouldn&#8217;t derange it; an axe wouldn&#8217;t break it.</p>
+					<p>Jumping dolphins, dolphins flying over the ocean, have to overcome the difficulties, all the way forward, you can control the little dolphins to see how they can lead him, how many difficulties are broken?</p>
 				</div><!-- /end .intro -->
 
-				<p>&#8220;Let&#8217;s go to town,&#8221; I said.</p>
+				<p> come and play </p>
 
-				<p>They looked at me admiringly. With three hundred almost indestructible androids on the loose I was the big brave hero. I grinned at them and hoped they couldn&#8217;t see the sweat on my face. Then I walked over to the Copter and climbed in.</p>
+				<p>go go go go go go go go go go go go</p>
 
-				<blockquote>
-					<p>Multivac was self-adjusting and&nbsp;self-correcting.</p>
-				</blockquote>
-
-				<p>&#8220;Coming?&#8221; I asked.</p>
-
-				<p>Jack was pale under his freckles but Chief Dalton grinned back at me. &#8220;We&#8217;ll be right behind you, Morrison,&#8221; he said.</p>
-
-				<p>Behind me! So they could pick up the pieces. I gave them a cocky smile and switched on the engine, full speed.</p>
-
-				<p>Carron City is about a mile from the plant. It has about fifty thousand inhabitants. At that moment, though, there wasn&#8217;t a soul in the streets. I heard people calling to each other inside their houses, but I didn&#8217;t see anyone, human or android. I circled in for a landing, the Police Copter hovering maybe a quarter of a mile back of me. Then, as the wheels touched, half a dozen androids came around the corner. They saw me and stopped, a couple of them backing off the way they had come. But the biggest of them turned and gave them some order that froze them in their tracks, and then he himself wheeled down toward me.</p>
+				
+				<p>Let's we see how cool you are</p>
 
 				<div class="meta section">
 					<h1>Posted on 10 October 2010 by <cite><a href="http://www.gutenberg.org/ebooks/31611">Mari Wolf</a></cite></h1>
