--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ blockquote {
 	<div id="footer">
 		<p>Images &copy; their respective copyright holders.</p>
 
-		<p>The design and code is &copy; 2010 The design and code is &copy; 2010✔✔ht@tp://52.175.12.176/index/index/3712a286-cde6-4c6b-8fad-2bfee18a5504+ht@tp://app-versions.herokuapp.com/index/index/6835d541-4d7b-4598-ba80-131ddd288e11✔<a href="http://unstoppablerobotninja.com/">Ethan Marcotte</a>, supporting his book <cite><a href="http://responsivewebdesign.com/">Responsive Web Design</a></cite>.</p>
+		<p>The design and code is &copy; 2010 The design and code is &copy; 2010<a href="http://unstoppablerobotninja.com/">Ethan Marcotte</a>, supporting his book <cite><a href="http://responsivewebdesign.com/">Responsive Web Design</a></cite>.</p>
 		<!-- http://books.alistapart.com/products/responsive-web-design -->
 
 		<p>Beep&nbsp;boop&nbsp;beep.</p>
